--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -22,6 +22,9 @@
   Phone number:
   <input type="text" name="phone_number" value="<%= @contact.phone_number %>">
 
+  Address:
+<input type="text" name="input_address">
+
 </div>
 <input type="submit" name="Aprietame">
 <% end %>
