--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -20,6 +20,10 @@
   <input type="text" name="phone_number">
 </div>
 
-<input type="submit" value="Tickle me">
+Address:
+<input type="text" name="input_address">
+
+
+<input type="submit" value="Tickle me Elmo">
 
 <% end %>
