--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,3 +1,8 @@
+ <%= form_tag "/contacts", method: :get do %>
+<input type="text" name="search_result" placeholder="Search...">
+<input type="submit" Value="Search">
+
+
 <p> First name: <%= @contact.first_name %></p>
 <p> Last name: <%= @contact.last_name %></p>
 <p> Email: <%= @contact.email %></p>
