Filtering contacts by group

--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -6,10 +6,17 @@
 <p> First name: <%= @contact.first_name %></p>
 <p> Last name: <%= @contact.last_name %></p>
 <p> Email: <%= @contact.email %></p>
+<ul>
+<% @contact.groups.each do |groups|%>
+  <li><%= groups.name.capitalize %></li>
+  <% end %>
+</ul>
 <p> Phone number: <%= @contact.phone_number %></p>
 <%= form_tag "/contacts/#{@contact.id}", method: :delete do %>
   <input type="submit" value="Destroy Product">
   <p>Latitude: <%= @contact.latitude %></p>
   <p>Longitud: <%= @contact.longitud %> </p> 
+
 <%= link_to "Delete Me", "contacts/#{@contact.id}", method: :delete %>
+<% end %>
 <% end %>
