--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,8 @@
             <% end %>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
+            <li> <%= link_to "Contacts", "/" %> </li>
+            <li><a href="/contacts?group=rugby">Rugby</li>
           </ul>
         </li>
       </ul>
