--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,6 +2,18 @@
 <input type="text" name="search_result" placeholder="Search...">
 <input type="submit" Value="Search">
 
+<% if @contacts.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@contacts.errors.count, "error") %> prohibited this article from being saved:</h2>
+ 
+    <ul>
+    <% @contacts.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 
 <p> First name: <%= @contact.first_name %></p>
 <p> Last name: <%= @contact.last_name %></p>
